force-app/main/default/objects/Produto__c/fields/Codigo_Produto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Produto__c</fullName>
    <description>Numeração automática de registro do produto na base de dados</description>
    <displayFormat>NS-{0000}</displayFormat>
    <label>Código</label>
    <type>AutoNumber</type>
</CustomField>