force-app/main/default/objects/Produto__c/fields/Descricao_Produto__c.field-meta.xml
<CustomField>
    <fullName>Descricao_Produto__c</fullName>
    <description>Campo disponível para incluir detalhes do produto.</description>
    <label>Descrição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>