force-app/main/default/objects/Produto__c/fields/Preco_Produto__c.field-meta.xml
<CustomField>
    <fullName>Preco_Produto__c</fullName>
    <description>Campo disponível para incluir preço do produto.</description>
    <label>Preço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>