force-app/main/default/objects/Produto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Codigo_Produto__c</columns>
    <columns>NAME</columns>
    <columns>Preco_Produto__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>